2009-08-14  Miguel de Dios  <miguel.dedios@artica.es>

	* index.php: add another ob_start for html result is with good order.
	
2009-08-14  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_html.php: fixes hidden bug in attribute array list,
	for input text.

2009-08-12  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	translation

2009-08-12  Jorge Gonzalez  <jorgegonz@artica.es>

	* include/languages/es.po, include/languages/es.mo: Updated Spanish
	translation

2009-08-11  Sancho Lerena  <slerena@artica.es>

	* pandora_console_install: New installer for console.
	
	* pandora_console.spec, install.php: minimal fixes.
	
	* pandora.css: Color change for table dual colors.
	
	* events.php: Added help and removed legend from table bottom.
	
	* include/help/en/help_eventview.php:  Help added.

2009-08-11  Miguel de Dios  <miguel.dedios@artica.es>

	* general/header.php: change the short php tags for standar php tags.

2009-08-11  Miguel de Dios <miguel.dedios@artica.es>

	* godmode/servers/manage_recontask_form.php,
	godmode/servers/manage_recontask.php, include/help/en/help_recontask.php,
	operation/servers/view_server_detail.php: change strings for more easy
	understand.

2009-08-11  Miguel de Dios <miguel.dedios@artica.es>

	* godmode/agentes/configurar_agente.php: change string for more easy
	understand.

2009-08-07  Miguel de Dios <miguel.dedios@artica.es>

	* operation/visual_console/index.php,
	pandora_console/operation/users/user.php, operation/incidents/incident.php,
	operation/agentes/status_monitor.php, operation/agentes/estado_agente.php,
	operation/agentes/alerts_status.php, include/styles/pandora.css,
	include/styles/pandora_black.css,include/styles/pandora_blackmetal.css,
	include/styles/pandora_width.css, include/styles/pandora_minimal.css,
	include/styles/pandora_red.css: the table list now has rows with alternate
	colours for easy see the data.
	